--- a/Turnos/templates/Turnos/turnos.html
+++ b/Turnos/templates/Turnos/turnos.html
@@ -13,105 +13,64 @@
         <div class="dia">
             <h3>Abril</h3>
         <div class="semana">
-            <p>L</p>
-            <p>M</p>
+            <p>Lu</p>
+            <p>Ma</p>
             <p>Mi</p>
-            <p>J</p>
-            <p>V</p>
-            <p>S</p>
-            <p>D</p>
+            <p>Ju</p>
+            <p>Vi</p>
+            <p>Sa</p>
+            <p>Do</p>
         </div>
         <div class="primero">
-            <a class="1" href="{% url 'recolecta'%}">1</a>
-            <a class="2" href="">2</a>
-            <a class="3" href="">3</a>
-            <a class="4" href="">4</a>
-            <a class="5" href="">5</a>
-            <a class="6" href="">6</a>
-            <a class="7" href="">7</a>
+            <a class="1" href="{% url 'recolecta' "2023-04-01"%}">1</a>
+            <a class="2" href="{% url 'recolecta' "2023-04-02"%}">2</a>
+            <a class="3" href="{% url 'recolecta' "2023-04-03"%}">3</a>
+            <a class="4" href="{% url 'recolecta' "2023-04-04"%}">4</a>
+            <a class="5" href="{% url 'recolecta' "2023-04-05"%}">5</a>
+            <a class="6" href="{% url 'recolecta' "2023-04-06"%}">6</a>
+            <a class="7" href="{% url 'recolecta' "2023-04-07"%}">7</a>
             
         </div>
         <div class="segundo">
-            <a class="8" href="">8</a>
-            <a class="9" href="">9</a>
-            <a class="10" href="">10</a>
-            <a class="11" href="">11</a>
-            <a class="12" href="">12</a>
-            <a class="13" href="">13</a>
-            <a class="14" href="">14</a>
+            <a class="8" href="{% url 'recolecta' "2023-04-08"%}">8</a>
+            <a class="9" href="{% url 'recolecta' "2023-04-09"%}">9</a>
+            <a class="10" href="{% url 'recolecta' "2023-04-10"%}">10</a>
+            <a class="11" href="{% url 'recolecta' "2023-04-11"%}">11</a>
+            <a class="12" href="{% url 'recolecta' "2023-04-12"%}">12</a>
+            <a class="13" href="{% url 'recolecta' "2023-04-13"%}">13</a>
+            <a class="14" href="{% url 'recolecta' "2023-04-14"%}">14</a>
             
         </div>
         <div class="tercero">
-            <a class="15" href="">15</a>
-            <a class="16" href="">16</a>
-            <a class="17" href="">17</a>
-            <a class="18" href="">18</a>
-            <a class="19" href="">19</a>
-            <a class="20" href="">20</a>
-            <a class="21" href="">21</a>
-            <a class="22" href="">22</a>
+            <a class="15" href="{% url 'recolecta' "2023-04-15"%}">15</a>
+            <a class="16" href="{% url 'recolecta' "2023-04-16"%}">16</a>
+            <a class="17" href="{% url 'recolecta' "2023-04-17"%}">17</a>
+            <a class="18" href="{% url 'recolecta' "2023-04-18"%}">18</a>
+            <a class="19" href="{% url 'recolecta' "2023-04-19"%}">19</a>
+            <a class="20" href="{% url 'recolecta' "2023-04-20"%}">20</a>
+            <a class="21" href="{% url 'recolecta' "2023-04-21"%}">21</a>
+            <a class="22" href="{% url 'recolecta' "2023-04-22"%}">22</a>
             
         </div>
         <div class="cuarto">
-            <a class="23" href="">23</a>
-            <a class="24" href="">24</a>
-        <a class="25" href="">25</a>
-        <a class="26" href="">26</a>
-        <a class="27" href="">27</a>
-        <a class="28" href="">28</a>
-        <a class="29" href="">29</a>
-        <a class="30" href="">30</a>
+            <a class="23" href="{% url 'recolecta' "2023-04-23"%}">23</a>
+            <a class="24" href="{% url 'recolecta' "2023-04-24"%}">24</a>
+        <a class="25" href="{% url 'recolecta' "2023-04-25"%}">25</a>
+        <a class="26" href="{% url 'recolecta' "2023-04-26"%}">26</a>
+        <a class="27" href="{% url 'recolecta' "2023-04-27"%}">27</a>
+        <a class="28" href="{% url 'recolecta' "2023-04-28"%}">28</a>
+        <a class="29" href="{% url 'recolecta' "2023-04-29"%}">29</a>
+        <a class="30" href="{% url 'recolecta' "2023-04-30"%}">30</a>
     </div>
         </div> 
     
-    <div class="container">
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>Hora Inicio</th>
-                    <th>Hora Fin</th>
-                    <th>Asignado a</th>
-                    <th>Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-          {% for turno in turnos %}
-          <tr>
-              <td>{{ turno.fecha }}</td>
-              <td>{{ turno.hora_inicio }}</td>
-              <td>{{ turno.hora_fin }}</td>
-              {% if turno.asignado_a %}
-              <td>{{ turno.asignado_a.username}}</td>
-              {% else %}
-              <td>Disponible</td>
-              {% endif %}
-              
-              <td>
-                  <form method="post">
-                      {% if turno.activo %}
-                <a class="btn"  href="{% url 'Asignar' turno.id %}">Asignar</a>
-                {% endif %}
-                {% if not turno.activo and turno.asignado_a.username == user.username%}
-                <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a>
-                {% endif %}
-            </form>
-            </td>
-          </tr>
-        {% empty %}
-        <tr>
-            <td colspan="5">No hay turnos disponibles</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-</div>
 
 {% block Asignar %}
     {% endblock Asignar %}
     {% block Cancelar %}
     {% endblock Cancelar %}
+    {% block Turnos %}{% endblock Turnos %}
 
 </body>    
 </html>
