--- a/Turnos/static/Turnos/css/style.css
+++ b/Turnos/static/Turnos/css/style.css
@@ -167,3 +167,50 @@ tr:nth-child(2), tr:nth-child(4){
 }
 
 
+.form2{
+
+    display: flex;
+    width: 350px;
+
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    background-color: #252424;
+    box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+    color: #F1F1F2;
+}
+
+ul label{
+    color: white;
+}
+ul input{
+    background-color: #252424;
+    outline: white;
+    color: white;
+    padding: 7px;
+    margin-bottom: 30px;
+}
+ul input:focus{
+    border: 1px solid white;
+    border-radius: 5px;
+  
+}
+
+.botonEntrar{
+    margin-top: 20px;
+}
+
+.login{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+form ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
