--- a/Turnos/templates/Turnos/filtro.html
+++ b/Turnos/templates/Turnos/filtro.html
@@ -1,5 +1,5 @@
  {% extends 'Turnos/turnos.html' %}
- {% block Turnos %}
+ {% block Lista %}
 {% load static %}
  <div class="container filtroDiv">
      
@@ -26,14 +26,16 @@
                     {% endif %}
                     
                     <td>
-                        <form method="post">
+           
+                         
                             {% if turno.activo %}
                             <a class="btn"  href="{% url 'Asignar' turno.id %}">Reservar</a>
                             {% endif %}
                             {% if not turno.activo and turno.asignado_a.username == user.username%}
                             <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a>
                             {% endif %}
-                        </form>
+                         
+                   
                     </td>
                 </tr>
                 {% empty %}
@@ -44,5 +46,5 @@
             </tbody>
         </table>
     </div>
-    {% endblock Turnos %}
+    {% endblock Lista %}
     
