--- a/Turnos/static/Turnos/css/style.css
+++ b/Turnos/static/Turnos/css/style.css
@@ -123,7 +123,7 @@ tbody td{
     text-align: center;
     height: 300px;
     border-radius: 20px;
-    background-color: rgb(230, 230, 230);
+    background-color: #ffc600;
     box-shadow: 10px 10px 42px -13px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 42px -13px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 42px -13px rgba(0,0,0,0.75);
@@ -213,4 +213,12 @@ form ul{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.alter{
+    width: 800px;
+    margin: 0 auto;
+    padding-top: 30px;
+    height: 100vh;
+    background-color: #f1f1f1;
 }
