--- a/Turnos/templates/Turnos/filtro.html
+++ b/Turnos/templates/Turnos/filtro.html
@@ -27,14 +27,16 @@
                     
                     <td>
            
-                         
-                            {% if turno.activo %}
-                            <a class="btn"  href="{% url 'Asignar' turno.id %}">Reservar</a>
-                            {% endif %}
+                            {% if contador >= 1 %}
                             {% if not turno.activo and turno.asignado_a.username == user.username%}
                             <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a>
                             {% endif %}
-                         
+                            {% else %}
+                            {% if turno.activo %}
+                            <a class="btn"  href="{% url 'Asignar' turno.id %}">Reservar</a>
+                            {% endif %}
+                            {% endif %}
+                            
                    
                     </td>
                 </tr>
