--- a/Turnos/templates/Turnos/index.html
+++ b/Turnos/templates/Turnos/index.html
@@ -12,13 +12,13 @@
     <body>
         <div class="navbar">
             <div class="logo">
-              <h2>Navbar</h2>
+              <h2>Turnos</h2>
             </div>
             <ul class="links">
               <li><a href="#">home</a></li>
               <li><a href="#">link 1</a></li>
               <li><a href="#">link 2</a></li>
-              <li><a href="#">link 3</a></li>
+              <li><a href={% url 'misTurnos'  %}>Mis turnos</a><p></p></li>
             </ul>
             <div class="right">
                 {% if request.user.is_authenticated %}
@@ -35,6 +35,7 @@
               <div class="line3"></div>
             </div>
         </div>
+        <div class="alter">
         {% block Turnos %}{% endblock Turnos %}
         {% block Asignar %}
         {% endblock Asignar %}
@@ -43,6 +44,7 @@
         {% block Cancelar %}
         {% endblock Cancelar %}
         {% block Lista %}{% endblock Lista %}
+      </div>
         <script src="{% static 'Turnos/js/navbar.js' %}"></script>
     </body>    
 </html>
