--- a/Turnos/templates/Turnos/turnos.html
+++ b/Turnos/templates/Turnos/turnos.html
@@ -59,6 +59,6 @@
         <div class="container"><p style="font-size: 30px">{{mensaje}}</p></div>
 
         
-
+{{context.texto}}
     {% endblock Turnos %}
     
