--- a/Turnos/templates/Turnos/misTurnos.html
+++ b/Turnos/templates/Turnos/misTurnos.html
@@ -2,10 +2,12 @@
 
 {% block Turnos %}
 {% if not miTurno %}
-<p>No tenes turnos</p>
+<p>No tienes turnos disponibles</p>
 {% else %}
 {% for turno in miTurno %}
-<p>Hola {{turno.asignado_a}}, tu turno es el día: {{turno.fecha}} a las {{turno.hora_inicio}}</p>
+<p>Hola {{turno.asignado_a}}, tu turno es el día: {{turno.fecha}} a las {{turno.hora_inicio}} <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a></p>
+
+
 {% endfor %}
 {% endif %}
 
