Cambio de estilos CSS

--- a/Turnos/static/Turnos/css/navbar.css
+++ b/Turnos/static/Turnos/css/navbar.css
@@ -40,6 +40,7 @@ ul {
   margin-right: 50px;
   list-style: none;
   display: flex;
+  width: 90%;
   align-items: center;
   transition: 0.4s ease all, 0s ease background;
 }
@@ -51,27 +52,33 @@ ul {
   justify-content: center;
   align-items: center;
   transition: 0.4s ease all, 0s ease margin;
+  display: flex;
+  flex-direction: row;
 }
 .navbar ul.links li a {
   text-decoration: none;
   color: #fff;
 }
 .navbar ul.links li:hover {
-  background: #ffc600;
+  background: #fff400;
   cursor: pointer;
 }
 .navbar ul.links li:hover a {
   color: #080808;
 }
 .boton {
-  background: #ffc600;
+  background: #fff400;
   outline: none;
+  color: black;
+  
   font-weight: bold;
   padding: 10px 18px;
   border-radius: 25px;
   border: 1px solid #e6b200;
   letter-spacing: 1px;
+  text-decoration: none;
 }
+
 .boton:hover {
   cursor: pointer;
   transform: scale(1.1);
@@ -89,9 +96,9 @@ ul {
   color: #fff;
 }
 .content h2 {
-  color: #ffc600;
+  color: #fff400;
 }
-/* .navbar.sticky {
+.navbar.sticky {
   position: fixed;
   z-index: 40;
 }
@@ -99,10 +106,10 @@ ul {
   position: relative;
   z-index: 20;
   top: 65px;
-} */
+}
 section {
   background: #000;
-  color: #ffc600;
+  color: #fff400;
   padding: 20px;
   font-family: "Lacquer";
   font-weight: bold;
