--- a/Turnos/templates/Turnos/filtro.html
+++ b/Turnos/templates/Turnos/filtro.html
@@ -13,7 +13,7 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="tbodyTurnos">
                 {% for turno in horaInicio %}
                 <tr>
                     <td>{{ turno.fecha }}</td>
