--- a/Turnos/templates/Turnos/misTurnos.html
+++ b/Turnos/templates/Turnos/misTurnos.html
@@ -5,8 +5,14 @@
 <p>No tienes turnos disponibles</p>
 {% else %}
 {% for turno in miTurno %}
-<p>Hola {{turno.asignado_a}}, tu turno es el día: {{turno.fecha}} a las {{turno.hora_inicio}} <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a></p>
+<div class="containerEliminar">
 
+    <div class="eliminarReserva">
+        
+        <p>Hola {{turno.asignado_a}}, tu turno es el día: {{turno.fecha}} a las {{turno.hora_inicio}} <a class="btn-red"href="{% url 'Eliminar' turno.id %}">Eliminar Reserva</a></p>
+        
+    </div>
+</div>
 
 {% endfor %}
 {% endif %}
