--- a/Turnos/templates/Turnos/index.html
+++ b/Turnos/templates/Turnos/index.html
@@ -44,7 +44,9 @@
             </div>
         </div>
         <div class="alter">
-        {% block Turnos %}{% endblock Turnos %}
+        {% block Turnos %}
+        
+        {% endblock Turnos %}
         {% block Asignar %}
         {% endblock Asignar %}
         {% block Login %}{% endblock Login %}
