--- a/Turnos/templates/Turnos/turnos.html
+++ b/Turnos/templates/Turnos/turnos.html
@@ -25,4 +25,6 @@
         <script src="{% static 'Turnos/js/calendario.js' %}"></script>
         
     {% endblock Turnos %}
+    {% block Asignar %}
+    {% endblock Asignar %}
     
